# kmad

./: .README.md.swp  .gitignore  .map  1  1AA1_E.fasta.7c  1AA1_E.fasta.7c_al  1AA1_E.fasta.7c_col_dom  1AA1_E.fasta.7c_col_motifs  1AA1_E.fasta.7c_col_phosph  1AA1_E.fasta.7c_col_reg  1AA1_E.fasta.7c_longer_al  1AA1_E.fasta.7c_longer_col_dom  1AA1_E.fasta.7c_longer_col_motifs  1AA1_E.fasta.7c_longer_col_phosph  1AA1_E.fasta.7c_longer_col_reg  1q  2  AP180.fasta  AP180.fasta_al  AP180_RAT.4c  BRCA1_HUMAN.reduced.7c  CDN1A_4char  CDN1A_4char_al  CDN1A_4char_al2  CDN1A_4char_al_withoutPhosph_g10  CDN1A_HUMAN.fasta  CDN1A_HUMAN.fasta_al  CONFIGURE_file_template  CONF_file_example  DHB_CRAPL.4c  DHB_CRAPL.6c  DHB_CRAPL.6c_lcr  DHB_CRAPL.fasta  DHB_CRAPL.fasta_al  DHB_CRAPL6c_m2_al  DHB_CRAPL6ccol  DHB_CRAPL6cout_al  DHB_CRAPL_al  DHB_CRAPLfastacol  DHB_CRAPLfastaout_al  (+151 more)
SMART_results/: DHB_CRAPL_SMART_results.txt
Users/joanna/Documents/MASTER_THESIS/software/cppMSA/instrumentscli1.trace/instrument_data/EF4DC038-8A17-421A-8050-39DD0980C06F/run_data/: 1.run
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
data/: elm_complete.txt
examples/: ap180_clustal.html  ap180_g10_col.html  ap180_g10_col_norm.html  ap180_g10_col_norm_al  ap180_g6_col.html  dhb_g10_col.html  dhb_g6_col.html
html/: _features_profile_8h_source.html  _profile_8h_source.html  _scoring_matrix_8h_source.html  _sequences_8h_source.html  annotated.html  class_features_profile-members.html  class_features_profile.html  class_profile-members.html  class_profile.html  class_scoring_matrix-members.html  class_scoring_matrix.html  class_sequences-members.html  class_sequences.html  classes.html  files.html  find_val_8h_source.html  functions.html  functions_func.html  index.html  misc_8h_source.html  substitution_matrix_8h_source.html  txt_proc_8h_source.html  vec_util_8h_source.html
html/search/: all_1.js  all_3.js  classes_1.js  functions_0.js  search.js
instrumentscli1.trace/: form.template
instrumentscli2.trace/: form.template
kmad-0.0.0/: Makefile.am  Makefile.in
kmad-0.0.0/src/: compare_doubles.cpp  compare_doubles.h  feature_scores.cpp  feature_scores.h  kmad.cpp  optimizer.h  outfile.h  profile.cpp  scoring_matrix.cpp  seq_data.h
kmad-0.0.0/tests/: test_compare_doubles.cpp  test_config.cpp  test_fasta.cpp  test_feature_analysis.cpp  test_feature_scores.cpp  test_msa.cpp  test_optimizer.cpp  test_outfile.cpp  test_profile.cpp  test_scoring_matrix.cpp  test_seq_data.cpp
latex/: annotated.tex  class_features_profile.tex  class_profile.tex  class_scoring_matrix.tex  class_sequences.tex  refman.tex
m4/: gcov.m4
scripts/: annotate_strct_alignment.patch  annotate_strct_alignment.py  convert.py  create_html.py  split_swiss_fasta.py  split_swiss_txt.py  style.css  template.html  update_elm.py
scripts/patches/: annotate_strct_alignment.patch
src/: .types.h.swp  FeaturesProfile.cpp  FeaturesProfile.h  Profile.cpp  Profile.h  Residue.cpp  Residue.h  ScoringMatrix.cpp  ScoringMatrix.h  Sequences.cpp  Sequences.h  compare_doubles.cpp  compare_doubles.h  config.cpp  f_config.cpp  f_config.gcda  f_config.gcno  f_config.h  fasta.cpp  fasta.gcda  fasta.gcno  fasta.h  feature_analysis.cpp  feature_analysis.h  feature_scores.cpp  feature_scores.gcda  feature_scores.gcno  feature_scores.h  features_profile.cpp  features_profile.h  findVal.cpp  findVal.h  kmad.cpp  kman.cpp  kman.gcno  misc.cpp  misc.h  msa.cpp  msa.gcda  msa.gcno  (+38 more)
tests/: TAU_SPECI.fasta.7c  integration_test.cpp  invalid_codon.fasta.7c  test.map  test_compare_doubles.cpp  test_conf_file.cfg  test_conf_file_settingnotfound.cfg  test_conf_file_wrongformat.cfg  test_conffile_pattern.cfg  test_config.cpp  test_config.gcda  test_config.gcno  test_expected_feat.7c  test_expected_nofeat.1c  test_fasta.cpp  test_fasta.gcda  test_fasta.gcno  test_fasta_feat.7c  test_fasta_nofeat.1c  test_feature_analysis.cpp  test_feature_scores.cpp  test_feature_scores.gcda  test_feature_scores.gcno  test_features_profile.cpp  test_msa.cpp  test_msa.gcda  test_msa.gcno  test_optimizer.cpp  test_out_decoded.fasta_al  test_out_encoded.fasta_al  test_outfile.cpp  test_profile.cpp  test_profile.gcda  test_profile.gcno  test_scoring_matrix.cpp  test_scoring_matrix.gcda  test_scoring_matrix.gcno  test_seq_data.cpp  test_seq_data.gcda  test_seq_data.gcno  (+5 more)
